--- a/docs/docs-ref-autogen/office/office/officeextension.trackedobjects.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.trackedobjects.yml
@@ -15,7 +15,7 @@ items:
       - 'office!OfficeExtension.TrackedObjects#remove:member(2)'
   - uid: 'office!OfficeExtension.TrackedObjects#add:member(1)'
     summary: |-
-      根据文档中的周围更改，跟踪新对象的自动调整。 仅某些对象类型需要此。 如果您使用的是跨 "同步" 调用的对象和在 "运行" 批处理的顺序执行之外的外部，并在设置属性或调用对象上的方法时获取 "InvalidObjectPath" 错误，则需要将该对象添加到跟踪的对象集合中。首次创建对象时。
+      根据文档中的周围更改，跟踪新对象的自动调整。 仅某些对象类型需要此。 如果您使用的是跨 "同步" 调用的对象和在 "run" 批处理的顺序执行之外的外部，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将对象添加到跟踪的对象集合中。
 
       此方法还具有以下签名：
 
@@ -37,7 +37,7 @@ items:
           type:
             - 'office!OfficeExtension.ClientObject:class'
   - uid: 'office!OfficeExtension.TrackedObjects#add:member(2)'
-    summary: 根据文档中的周围更改，跟踪一组对象的自动调整。 仅某些对象类型需要此。 如果您使用的是跨 "同步" 调用的对象和在 "运行" 批处理的顺序执行之外的外部，并在设置属性或调用对象上的方法时获取 "InvalidObjectPath" 错误，则需要将该对象添加到跟踪的对象集合中。首次创建对象时。
+    summary: 根据文档中的周围更改，跟踪一组对象的自动调整。 仅某些对象类型需要此。 如果您使用的是跨 "同步" 调用的对象和在 "run" 批处理的顺序执行之外的外部，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将对象添加到跟踪的对象集合中。
     name: add(objects)
     fullName: add(objects)
     langs:
@@ -56,7 +56,7 @@ items:
             - 'office!OfficeExtension.TrackedObjects#add~0:complex'
   - uid: 'office!OfficeExtension.TrackedObjects#remove:member(1)'
     summary: |-
-      释放与之前添加到此集合中的对象关联的内存。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前`context.sync()` ，您需要调用该过程。
+      释放与之前添加到此集合中的对象关联的内存。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
 
       此方法还具有以下签名：
 
@@ -78,7 +78,7 @@ items:
           type:
             - 'office!OfficeExtension.ClientObject:class'
   - uid: 'office!OfficeExtension.TrackedObjects#remove:member(2)'
-    summary: 释放与之前添加到此集合中的对象关联的内存。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前`context.sync()` ，您需要调用该过程。
+    summary: 释放与之前添加到此集合中的对象关联的内存。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
     name: remove(objects)
     fullName: remove(objects)
     langs:
