--- a/docs/docs-ref-autogen/outlook_1_8/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/toc.yml
@@ -60,7 +60,7 @@ items:
             uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
-          - name: 正文
+          - name: Body
             uid: 'outlook!Office.Body:interface'
           - name: 类别
             uid: 'outlook!Office.Categories:interface'
@@ -72,11 +72,11 @@ items:
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: 过程
+          - name: Diagnostics
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
-          - name: Emailuser.displayname
+          - name: EmailUser
             uid: 'outlook!Office.EmailUser:interface'
           - name: EnhancedLocation
             uid: 'outlook!Office.EnhancedLocation:interface'
@@ -88,7 +88,7 @@ items:
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
-          - name: 项目
+          - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -116,7 +116,7 @@ items:
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -216,7 +216,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: 源
+                  - name: Source
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
