--- a/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
@@ -14,7 +14,7 @@ items:
       - 'visio!Visio.RequestContext:constructor(1)'
       - 'visio!Visio.RequestContext#document:member'
   - uid: 'visio!Visio.RequestContext:constructor(1)'
-    summary: 构造`RequestContext`类的新实例
+    summary: 构造类的新实例 `RequestContext`
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
