--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.tablecolumn.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.tablecolumn.yml
@@ -249,7 +249,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.TableColumn#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -267,7 +267,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.TableColumnLoadOptions:interface'
   - uid: 'excel!Excel.TableColumn#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -304,7 +304,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.TableColumn#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -322,7 +322,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -389,7 +389,7 @@ items:
           type:
             - 'excel!Excel.TableColumn:class'
   - uid: 'excel!Excel.TableColumn#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 TableColumn 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableColumnData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 TableColumn 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableColumnData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
