--- a/docs/docs-ref-autogen/onenote/onenote/onenote.image.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.image.yml
@@ -185,7 +185,7 @@ items:
           type:
             - 'onenote!OneNote.Interfaces.ImageLoadOptions:interface'
   - uid: 'onenote!OneNote.Image#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -324,7 +324,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'onenote!OneNote.Image#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -474,7 +474,7 @@ items:
           type:
             - 'onenote!OneNote.Image:class'
   - uid: 'onenote!OneNote.Image#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 "OneNote. Image" 对象是 API 对象， `toJSON`但方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.ImageData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 "OneNote. Image" 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.ImageData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
