commit bilingual contents

--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.Interfaces.PageContentCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="0612c-101">一个用于更新 PageContentCollection 对象上的数据的接口，可用于 "pageContentCollection （</span><span class="sxs-lookup"><span data-stu-id="0612c-101">An interface for updating data on the PageContentCollection object, for use in "pageContentCollection.set(</span></span><!-- --><span data-ttu-id="0612c-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="0612c-102"></span></span><!-- --><span data-ttu-id="0612c-103">)".</span><span class="sxs-lookup"><span data-stu-id="0612c-103"></span></span>'
+    summary: '一个用于更新 PageContentCollection 对象上的数据的接口，可用于 "pageContentCollection （<!-- -->{ ... }<!-- -->)".'
     name: OneNote.Interfaces.PageContentCollectionUpdateData
     fullName: OneNote.Interfaces.PageContentCollectionUpdateData
     langs:
