--- a/docs/docs-ref-autogen/excel/excel/excel.customdatavalidation.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.customdatavalidation.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CustomDataValidation:interface'
     summary: |-
-      <span data-ttu-id="5830e-101">代表自定义数据验证条件。</span><span class="sxs-lookup"><span data-stu-id="5830e-101">Represents the Custom data validation criteria.</span></span>
+      代表自定义数据验证条件。
 
-      <span data-ttu-id="5830e-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5830e-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CustomDataValidation
     fullName: Excel.CustomDataValidation
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.CustomDataValidation#formula:member'
   - uid: 'excel!Excel.CustomDataValidation#formula:member'
     summary: |-
-      <span data-ttu-id="5830e-103">自定义数据验证公式。</span><span class="sxs-lookup"><span data-stu-id="5830e-103">A custom data validation formula.</span></span> <span data-ttu-id="5830e-104">这将创建特殊的输入规则，如阻止重复项或限制单元格范围中的总计。</span><span class="sxs-lookup"><span data-stu-id="5830e-104">This creates special input rules, such as preventing duplicates, or limiting the total in a range of cells.</span></span>
+      自定义数据验证公式。 这将创建特殊的输入规则，如阻止重复项或限制单元格范围中的总计。
 
-      <span data-ttu-id="5830e-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5830e-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
