--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartborderdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartBorderData:interface'
-    summary: <span data-ttu-id="0e7db-101">描述通过调用返回的数据的接口`chartBorder.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0e7db-101">An interface describing the data returned by calling `chartBorder.toJSON()`</span></span><!-- --><span data-ttu-id="0e7db-102">.</span><span class="sxs-lookup"><span data-stu-id="0e7db-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartBorder.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartBorderData
     fullName: Excel.Interfaces.ChartBorderData
     langs:
