--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionaldatabarpositiveformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionaldatabarpositiveformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData:interface'
-    summary: '<span data-ttu-id="b319b-101">一个用于更新 ConditionalDataBarPositiveFormat 对象上的数据的接口，可用于`conditionalDataBarPositiveFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b319b-101">An interface for updating data on the ConditionalDataBarPositiveFormat object, for use in `conditionalDataBarPositiveFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="b319b-102">.</span><span class="sxs-lookup"><span data-stu-id="b319b-102"></span></span>'
+    summary: '一个用于更新 ConditionalDataBarPositiveFormat 对象上的数据的接口，可用于`conditionalDataBarPositiveFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
     fullName: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
     langs:
