--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartticklabelalignment.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartticklabelalignment.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ChartTickLabelAlignment:enum'
-    summary: '<span data-ttu-id="82c87-101">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="82c87-101">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ChartTickLabelAlignment
     fullName: Excel.ChartTickLabelAlignment
     langs:
