--- a/docs/docs-ref-autogen/onenote/onenote/onenote.imageocrdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.imageocrdata.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'onenote!OneNote.ImageOcrData:interface'
     summary: |-
-      <span data-ttu-id="b9485-101">表示由图像的 OCR （光学字符识别）获取的数据。</span><span class="sxs-lookup"><span data-stu-id="b9485-101">Represents data obtained by OCR (optical character recognition) of an image.</span></span>
+      表示由图像的 OCR （光学字符识别）获取的数据。
 
-      <span data-ttu-id="b9485-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9485-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.ImageOcrData
     fullName: OneNote.ImageOcrData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'onenote!OneNote.ImageOcrData#ocrText:member'
   - uid: 'onenote!OneNote.ImageOcrData#ocrLanguageId:member'
     summary: |-
-      <span data-ttu-id="b9485-103">表示带有类似于 EN-US 值的 OCR 语言</span><span class="sxs-lookup"><span data-stu-id="b9485-103">Represents the OCR language, with values such as EN-US</span></span>
+      表示带有类似于 EN-US 值的 OCR 语言
 
-      <span data-ttu-id="b9485-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9485-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: ocrLanguageId
     fullName: ocrLanguageId
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'onenote!OneNote.ImageOcrData#ocrText:member'
     summary: |-
-      <span data-ttu-id="b9485-105">表示由图像 OCR 获取的文本</span><span class="sxs-lookup"><span data-stu-id="b9485-105">Represents the text obtained by OCR of the image</span></span>
+      表示由图像 OCR 获取的文本
 
-      <span data-ttu-id="b9485-106">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9485-106">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: ocrText
     fullName: ocrText
     langs:
