--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="91ba4-101">表示 InkAnalysisLine 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="91ba4-101">Represents a collection of InkAnalysisLine objects.</span></span>
+      表示 InkAnalysisLine 对象的集合。
 
-      <span data-ttu-id="91ba4-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="91ba4-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
     fullName: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="91ba4-103">对于集合中的每一项：获取 InkAnalysisLine 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="91ba4-103">For EACH ITEM in the collection: Gets the ID of the InkAnalysisLine object.</span></span> <span data-ttu-id="91ba4-104">只读。</span><span class="sxs-lookup"><span data-stu-id="91ba4-104">Read-only.</span></span>
+      对于集合中的每一项：获取 InkAnalysisLine 对象的 ID。 只读。
 
-      <span data-ttu-id="91ba4-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="91ba4-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#paragraph:member'
     summary: |-
-      <span data-ttu-id="91ba4-106">对于集合中的每个项目：对父 InkAnalysisParagraph 的引用。</span><span class="sxs-lookup"><span data-stu-id="91ba4-106">For EACH ITEM in the collection: Reference to the parent InkAnalysisParagraph.</span></span>
+      对于集合中的每个项目：对父 InkAnalysisParagraph 的引用。
 
-      <span data-ttu-id="91ba4-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="91ba4-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: paragraph
     fullName: paragraph
     langs:
@@ -59,9 +59,9 @@ items:
           - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#words:member'
     summary: |-
-      <span data-ttu-id="91ba4-108">对于集合中的每一项：获取此墨迹分析行中的墨迹分析词。</span><span class="sxs-lookup"><span data-stu-id="91ba4-108">For EACH ITEM in the collection: Gets the ink analysis words in this ink analysis line.</span></span>
+      对于集合中的每一项：获取此墨迹分析行中的墨迹分析词。
 
-      <span data-ttu-id="91ba4-109">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="91ba4-109">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: words
     fullName: words
     langs:
