--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.Interfaces.SectionData:interface'
-    summary: <span data-ttu-id="53529-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="53529-101">An interface describing the data returned by calling "section.toJSON()".</span></span>
+    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
     name: OneNote.Interfaces.SectionData
     fullName: OneNote.Interfaces.SectionData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'onenote!OneNote.Interfaces.SectionData#webUrl:member'
   - uid: 'onenote!OneNote.Interfaces.SectionData#clientUrl:member'
     summary: |-
-      <span data-ttu-id="53529-102">分区的客户端 url。</span><span class="sxs-lookup"><span data-stu-id="53529-102">The client url of the section.</span></span> <span data-ttu-id="53529-103">只读</span><span class="sxs-lookup"><span data-stu-id="53529-103">Read only</span></span>
+      分区的客户端 url。 只读
 
-      <span data-ttu-id="53529-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: clientUrl
     fullName: clientUrl
     langs:
@@ -33,9 +33,9 @@ items:
           - string
   - uid: 'onenote!OneNote.Interfaces.SectionData#id:member'
     summary: |-
-      <span data-ttu-id="53529-105">获取分区的 ID。</span><span class="sxs-lookup"><span data-stu-id="53529-105">Gets the ID of the section.</span></span> <span data-ttu-id="53529-106">只读。</span><span class="sxs-lookup"><span data-stu-id="53529-106">Read-only.</span></span>
+      获取分区的 ID。 只读。
 
-      <span data-ttu-id="53529-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -48,9 +48,9 @@ items:
           - string
   - uid: 'onenote!OneNote.Interfaces.SectionData#isEncrypted:member'
     summary: |-
-      <span data-ttu-id="53529-108">如此如果使用密码加密此节。</span><span class="sxs-lookup"><span data-stu-id="53529-108">True if this section is encrypted with a password.</span></span> <span data-ttu-id="53529-109">只读</span><span class="sxs-lookup"><span data-stu-id="53529-109">Read only</span></span>
+      如此如果使用密码加密此节。 只读
 
-      <span data-ttu-id="53529-110">\[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-110">\[ [API set: OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: isEncrypted
     fullName: isEncrypted
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.SectionData#isLocked:member'
     summary: |-
-      <span data-ttu-id="53529-111">如果此节已锁定，则为 True。</span><span class="sxs-lookup"><span data-stu-id="53529-111">True if this section is locked.</span></span> <span data-ttu-id="53529-112">只读</span><span class="sxs-lookup"><span data-stu-id="53529-112">Read only</span></span>
+      如果此节已锁定，则为 True。 只读
 
-      <span data-ttu-id="53529-113">\[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-113">\[ [API set: OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: isLocked
     fullName: isLocked
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.SectionData#name:member'
     summary: |-
-      <span data-ttu-id="53529-114">获取分区的名称。</span><span class="sxs-lookup"><span data-stu-id="53529-114">Gets the name of the section.</span></span> <span data-ttu-id="53529-115">只读。</span><span class="sxs-lookup"><span data-stu-id="53529-115">Read-only.</span></span>
+      获取分区的名称。 只读。
 
-      <span data-ttu-id="53529-116">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-116">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -93,9 +93,9 @@ items:
           - string
   - uid: 'onenote!OneNote.Interfaces.SectionData#pages:member'
     summary: |-
-      <span data-ttu-id="53529-117">分区中的页面集合。</span><span class="sxs-lookup"><span data-stu-id="53529-117">The collection of pages in the section.</span></span> <span data-ttu-id="53529-118">只读</span><span class="sxs-lookup"><span data-stu-id="53529-118">Read only</span></span>
+      分区中的页面集合。 只读
 
-      <span data-ttu-id="53529-119">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-119">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: pages
     fullName: pages
     langs:
@@ -108,9 +108,9 @@ items:
           - 'onenote!OneNote.Interfaces.SectionData#pages~0:complex'
   - uid: 'onenote!OneNote.Interfaces.SectionData#webUrl:member'
     summary: |-
-      <span data-ttu-id="53529-120">页面的 Web URL。</span><span class="sxs-lookup"><span data-stu-id="53529-120">The web url of the page.</span></span> <span data-ttu-id="53529-121">只读</span><span class="sxs-lookup"><span data-stu-id="53529-121">Read only</span></span>
+      页面的 Web URL。 只读
 
-      <span data-ttu-id="53529-122">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53529-122">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: webUrl
     fullName: webUrl
     langs:
