--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#resolved:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
