commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CommentCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="d10b2-101">一个用于更新 CommentCollection 对象上的数据的接口，可用于`commentCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="d10b2-101">An interface for updating data on the CommentCollection object, for use in `commentCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="d10b2-102">.</span><span class="sxs-lookup"><span data-stu-id="d10b2-102"></span></span>'
+    summary: '一个用于更新 CommentCollection 对象上的数据的接口，可用于`commentCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.CommentCollectionUpdateData
     fullName: Excel.Interfaces.CommentCollectionUpdateData
     langs:
