--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.filterdatetime.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.filterdatetime.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.FilterDatetime:interface'
     summary: |-
-      <span data-ttu-id="fa143-101">表示在筛选值时如何筛选日期。</span><span class="sxs-lookup"><span data-stu-id="fa143-101">Represents how to filter a date when filtering on values.</span></span>
+      表示在筛选值时如何筛选日期。
 
-      <span data-ttu-id="fa143-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa143-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.FilterDatetime
     fullName: Excel.FilterDatetime
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.FilterDatetime#specificity:member'
   - uid: 'excel!Excel.FilterDatetime#date:member'
     summary: |-
-      <span data-ttu-id="fa143-103">用于筛选数据的采用 ISO8601 格式的日期。</span><span class="sxs-lookup"><span data-stu-id="fa143-103">The date in ISO8601 format used to filter data.</span></span>
+      用于筛选数据的采用 ISO8601 格式的日期。
 
-      <span data-ttu-id="fa143-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa143-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: date
     fullName: date
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'excel!Excel.FilterDatetime#specificity:member'
     summary: |-
-      <span data-ttu-id="fa143-105">用于保留数据的日期的具体程度。</span><span class="sxs-lookup"><span data-stu-id="fa143-105">How specific the date should be used to keep data.</span></span> <span data-ttu-id="fa143-106">例如，如果日期是 2005-04-02 并且将特殊性设置为“月”，则筛选操作将保留包含 2009 年 4 月日期的所有行。</span><span class="sxs-lookup"><span data-stu-id="fa143-106">For example, if the date is 2005-04-02 and the specifity is set to "month", the filter operation will keep all rows with a date in the month of april 2009.</span></span>
+      用于保留数据的日期的具体程度。 例如，如果日期是 2005-04-02 并且将特殊性设置为“月”，则筛选操作将保留包含 2009 年 4 月日期的所有行。
 
-      <span data-ttu-id="fa143-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa143-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: specificity
     fullName: specificity
     langs:
