--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="070ad-101">封装图表图例的格式属性。</span><span class="sxs-lookup"><span data-stu-id="070ad-101">Encapsulates the format properties of a chart legend.</span></span>
+      封装图表图例的格式属性。
 
-      <span data-ttu-id="070ad-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="070ad-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLegendFormatLoadOptions
     fullName: Excel.Interfaces.ChartLegendFormatLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions#border:member'
       - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="070ad-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="070ad-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="070ad-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="070ad-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="070ad-105">).</span><span class="sxs-lookup"><span data-stu-id="070ad-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="070ad-106">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="070ad-106">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      表示边框格式，包括颜色、线条样式和粗细。
 
-      <span data-ttu-id="070ad-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="070ad-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="070ad-108">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="070ad-108">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span>
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="070ad-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="070ad-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
