--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlineformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLineFormatData:interface'
-    summary: <span data-ttu-id="548a8-101">描述通过调用返回的数据的接口`chartLineFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="548a8-101">An interface describing the data returned by calling `chartLineFormat.toJSON()`</span></span><!-- --><span data-ttu-id="548a8-102">.</span><span class="sxs-lookup"><span data-stu-id="548a8-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLineFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLineFormatData
     fullName: Excel.Interfaces.ChartLineFormatData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLineFormatData#weight:member'
   - uid: 'excel!Excel.Interfaces.ChartLineFormatData#color:member'
     summary: |-
-      <span data-ttu-id="548a8-103">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="548a8-103">HTML color code representing the color of lines in the chart.</span></span>
+      表示图表中的线条颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="548a8-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="548a8-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartLineFormatData#lineStyle:member'
     summary: |-
-      <span data-ttu-id="548a8-105">代表线条样式。</span><span class="sxs-lookup"><span data-stu-id="548a8-105">Represents the line style.</span></span> <span data-ttu-id="548a8-106">有关详细信息，请参阅 ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="548a8-106">See Excel.ChartLineStyle for details.</span></span>
+      代表线条样式。 有关详细信息，请参阅 ChartLineStyle。
 
-      <span data-ttu-id="548a8-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="548a8-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineStyle
     fullName: lineStyle
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLineFormatData#lineStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLineFormatData#weight:member'
     summary: |-
-      <span data-ttu-id="548a8-108">表示线条的粗细（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="548a8-108">Represents weight of the line, in points.</span></span>
+      表示线条的粗细（以磅为单位）。
 
-      <span data-ttu-id="548a8-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="548a8-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
