--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CommentCollectionData:interface'
-    summary: <span data-ttu-id="93038-101">描述通过调用返回的数据的接口`commentCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="93038-101">An interface describing the data returned by calling `commentCollection.toJSON()`</span></span><!-- --><span data-ttu-id="93038-102">.</span><span class="sxs-lookup"><span data-stu-id="93038-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`commentCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.CommentCollectionData
     fullName: Excel.Interfaces.CommentCollectionData
     langs:
