--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.headerfootergroupupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.headerfootergroupupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupUpdateData:interface'
-    summary: '<span data-ttu-id="be171-101">一个用于更新 HeaderFooterGroup 对象上的数据的接口，可用于`headerFooterGroup.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="be171-101">An interface for updating data on the HeaderFooterGroup object, for use in `headerFooterGroup.set({ ... })`</span></span><!-- --><span data-ttu-id="be171-102">.</span><span class="sxs-lookup"><span data-stu-id="be171-102"></span></span>'
+    summary: '一个用于更新 HeaderFooterGroup 对象上的数据的接口，可用于`headerFooterGroup.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.HeaderFooterGroupUpdateData
     fullName: Excel.Interfaces.HeaderFooterGroupUpdateData
     langs:
