--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.rangeunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.rangeunderlinestyle.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RangeUnderlineStyle:enum'
-    summary: '<span data-ttu-id="86a64-101">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86a64-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.RangeUnderlineStyle
     fullName: Excel.RangeUnderlineStyle
     langs:
