--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionaltopbottomcriteriontype.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionaltopbottomcriteriontype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalTopBottomCriterionType:enum'
     summary: |-
-      <span data-ttu-id="8a729-101">代表上述/低于平均条件格式类型的条件。</span><span class="sxs-lookup"><span data-stu-id="8a729-101">Represents the criteria for the above/below average conditional format type.</span></span>
+      代表上述/低于平均条件格式类型的条件。
 
-      <span data-ttu-id="8a729-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a729-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalTopBottomCriterionType
     fullName: Excel.ConditionalTopBottomCriterionType
     langs:
