--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.fivequartersset.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.fivequartersset.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.FiveQuartersSet:interface'
-    summary: '<span data-ttu-id="937bf-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="937bf-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.FiveQuartersSet
     fullName: Excel.FiveQuartersSet
     langs:
