commit translated contents

--- a/docs/docs-ref-autogen/excel_1_4/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_4/toc.yml
@@ -118,7 +118,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -200,7 +200,7 @@ items:
             uid: 'excel!Excel.PivotTable:class'
           - name: PivotTableCollection
             uid: 'excel!Excel.PivotTableCollection:class'
-          - name: 范围
+          - name: Range
             uid: 'excel!Excel.Range:class'
           - name: RangeBorder
             uid: 'excel!Excel.RangeBorder:class'
@@ -328,7 +328,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: 源
+                  - name: Source
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
