--- a/docs/docs-ref-autogen/excel_online/excel/excel.session.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.session.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Session:constructor(1)'
       - 'excel!Excel.Session#close:member(1)'
   - uid: 'excel!Excel.Session:constructor(1)'
-    summary: 构造`Session`类的新实例
+    summary: 构造类的新实例 `Session`
     name: '(constructor)(workbookUrl, requestHeaders, persisted)'
     fullName: '(constructor)(workbookUrl, requestHeaders, persisted)'
     langs:
