commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FormatProtectionData:interface'
-    summary: <span data-ttu-id="1f0c2-101">描述通过调用返回的数据的接口`formatProtection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="1f0c2-101">An interface describing the data returned by calling `formatProtection.toJSON()`</span></span><!-- --><span data-ttu-id="1f0c2-102">.</span><span class="sxs-lookup"><span data-stu-id="1f0c2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`formatProtection.toJSON()`<!-- -->.
     name: Excel.Interfaces.FormatProtectionData
     fullName: Excel.Interfaces.FormatProtectionData
     langs:
