--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.charterrorbarstype.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.charterrorbarstype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartErrorBarsType:enum'
     summary: |-
-      <span data-ttu-id="5aa64-101">代表误差线的范围类型。</span><span class="sxs-lookup"><span data-stu-id="5aa64-101">Represents the range type for error bars.</span></span>
+      代表误差线的范围类型。
 
-      <span data-ttu-id="5aa64-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5aa64-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartErrorBarsType
     fullName: Excel.ChartErrorBarsType
     langs:
