--- a/docs/docs-ref-autogen/excel/excel/excel.columnproperties.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.columnproperties.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ColumnProperties:interface'
     summary: |-
-      <span data-ttu-id="68fd4-101">表示 getColumnProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="68fd4-101">Represents the returned properties of getColumnProperties.</span></span>
+      表示 getColumnProperties 的返回属性。
 
-      <span data-ttu-id="68fd4-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68fd4-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ColumnProperties
     fullName: Excel.ColumnProperties
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.ColumnProperties#columnIndex:member'
   - uid: 'excel!Excel.ColumnProperties#address:member'
     summary: |-
-      <span data-ttu-id="68fd4-103">表示`address`属性。</span><span class="sxs-lookup"><span data-stu-id="68fd4-103">Represents the `address` property.</span></span>
+      表示`address`属性。
 
-      <span data-ttu-id="68fd4-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68fd4-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
     fullName: address
     langs:
@@ -34,9 +34,9 @@ items:
           - string
   - uid: 'excel!Excel.ColumnProperties#addressLocal:member'
     summary: |-
-      <span data-ttu-id="68fd4-105">表示`addressLocal`属性。</span><span class="sxs-lookup"><span data-stu-id="68fd4-105">Represents the `addressLocal` property.</span></span>
+      表示`addressLocal`属性。
 
-      <span data-ttu-id="68fd4-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68fd4-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
     fullName: addressLocal
     langs:
@@ -49,9 +49,9 @@ items:
           - string
   - uid: 'excel!Excel.ColumnProperties#columnIndex:member'
     summary: |-
-      <span data-ttu-id="68fd4-107">表示`columnIndex`属性。</span><span class="sxs-lookup"><span data-stu-id="68fd4-107">Represents the `columnIndex` property.</span></span>
+      表示`columnIndex`属性。
 
-      <span data-ttu-id="68fd4-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="68fd4-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
     fullName: columnIndex
     langs:
