--- a/docs/docs-ref-autogen/excel/excel/excel.datavalidationtype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.datavalidationtype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.DataValidationType:enum'
     summary: |-
-      <span data-ttu-id="84f67-101">表示数据验证类型枚举。</span><span class="sxs-lookup"><span data-stu-id="84f67-101">Represents Data validation type enum.</span></span>
+      表示数据验证类型枚举。
 
-      <span data-ttu-id="84f67-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84f67-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidationType
     fullName: Excel.DataValidationType
     langs:
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.DataValidationType.time:member'
       - 'excel!Excel.DataValidationType.wholeNumber:member'
   - uid: 'excel!Excel.DataValidationType.custom:member'
-    summary: <span data-ttu-id="84f67-103">自定义数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-103">Custom data validation type</span></span>
+    summary: 自定义数据验证类型
     name: custom
     fullName: custom
     langs:
@@ -31,7 +31,7 @@ items:
     type: field
     numericValue: '"Custom"'
   - uid: 'excel!Excel.DataValidationType.date:member'
-    summary: <span data-ttu-id="84f67-104">日期数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-104">Date data validation type</span></span>
+    summary: 日期数据验证类型
     name: date
     fullName: date
     langs:
@@ -39,7 +39,7 @@ items:
     type: field
     numericValue: '"Date"'
   - uid: 'excel!Excel.DataValidationType.decimal:member'
-    summary: <span data-ttu-id="84f67-105">小数数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-105">Decimal data validation type</span></span>
+    summary: 小数数据验证类型
     name: decimal
     fullName: decimal
     langs:
@@ -47,7 +47,7 @@ items:
     type: field
     numericValue: '"Decimal"'
   - uid: 'excel!Excel.DataValidationType.inconsistent:member'
-    summary: <span data-ttu-id="84f67-106">"不一致" 表示范围具有不一致的数据验证（不同的单元格有不同的规则）</span><span class="sxs-lookup"><span data-stu-id="84f67-106">Inconsistent means that the range has inconsistent data validation (there are different rules on different cells)</span></span>
+    summary: '"不一致" 表示范围具有不一致的数据验证（不同的单元格有不同的规则）'
     name: inconsistent
     fullName: inconsistent
     langs:
@@ -55,7 +55,7 @@ items:
     type: field
     numericValue: '"Inconsistent"'
   - uid: 'excel!Excel.DataValidationType.list:member'
-    summary: <span data-ttu-id="84f67-107">列表数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-107">List data validation type</span></span>
+    summary: 列表数据验证类型
     name: list
     fullName: list
     langs:
@@ -63,7 +63,7 @@ items:
     type: field
     numericValue: '"List"'
   - uid: 'excel!Excel.DataValidationType.mixedCriteria:member'
-    summary: <span data-ttu-id="84f67-108">MixedCriteria 表示区域在部分（而非所有单元格）上存在数据验证</span><span class="sxs-lookup"><span data-stu-id="84f67-108">MixedCriteria means that the range has data validation present on some but not all cells</span></span>
+    summary: MixedCriteria 表示区域在部分（而非所有单元格）上存在数据验证
     name: mixedCriteria
     fullName: mixedCriteria
     langs:
@@ -71,7 +71,7 @@ items:
     type: field
     numericValue: '"MixedCriteria"'
   - uid: 'excel!Excel.DataValidationType.none:member'
-    summary: <span data-ttu-id="84f67-109">"无" 表示允许任何值，因此范围中没有数据验证。</span><span class="sxs-lookup"><span data-stu-id="84f67-109">None means allow any value and so there is no data validation in the range.</span></span>
+    summary: '"无" 表示允许任何值，因此范围中没有数据验证。'
     name: none
     fullName: none
     langs:
@@ -79,7 +79,7 @@ items:
     type: field
     numericValue: '"None"'
   - uid: 'excel!Excel.DataValidationType.textLength:member'
-    summary: <span data-ttu-id="84f67-110">文本长度数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-110">Text length data validation type</span></span>
+    summary: 文本长度数据验证类型
     name: textLength
     fullName: textLength
     langs:
@@ -87,7 +87,7 @@ items:
     type: field
     numericValue: '"TextLength"'
   - uid: 'excel!Excel.DataValidationType.time:member'
-    summary: <span data-ttu-id="84f67-111">时间数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-111">Time data validation type</span></span>
+    summary: 时间数据验证类型
     name: time
     fullName: time
     langs:
@@ -95,7 +95,7 @@ items:
     type: field
     numericValue: '"Time"'
   - uid: 'excel!Excel.DataValidationType.wholeNumber:member'
-    summary: <span data-ttu-id="84f67-112">全数字数据验证类型</span><span class="sxs-lookup"><span data-stu-id="84f67-112">Whole number data validation type</span></span>
+    summary: 全数字数据验证类型
     name: wholeNumber
     fullName: wholeNumber
     langs:
