--- a/docs/docs-ref-autogen/excel/excel/excel.horizontalalignment.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.horizontalalignment.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.HorizontalAlignment:enum'
-    summary: '<span data-ttu-id="9505b-101">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9505b-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.HorizontalAlignment
     fullName: Excel.HorizontalAlignment
     langs:
