--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.formatprotectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
-    summary: '<span data-ttu-id="4e3c1-101">一个用于更新 FormatProtection 对象上的数据的接口，可用于`formatProtection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="4e3c1-101">An interface for updating data on the FormatProtection object, for use in `formatProtection.set({ ... })`</span></span><!-- --><span data-ttu-id="4e3c1-102">.</span><span class="sxs-lookup"><span data-stu-id="4e3c1-102"></span></span>'
+    summary: '一个用于更新 FormatProtection 对象上的数据的接口，可用于`formatProtection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.FormatProtectionUpdateData
     fullName: Excel.Interfaces.FormatProtectionUpdateData
     langs:
