--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.threesymbols2set.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.threesymbols2set.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ThreeSymbols2Set:interface'
-    summary: '<span data-ttu-id="f82b9-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f82b9-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ThreeSymbols2Set
     fullName: Excel.ThreeSymbols2Set
     langs:
