--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalformatpresetcriterion.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalformatpresetcriterion.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
     summary: |-
-      <span data-ttu-id="86eb3-101">代表预置条件条件格式类型的条件。</span><span class="sxs-lookup"><span data-stu-id="86eb3-101">Represents the criteria for the Preset Criteria conditional format type.</span></span>
+      代表预置条件条件格式类型的条件。
 
-      <span data-ttu-id="86eb3-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86eb3-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalFormatPresetCriterion
     fullName: Excel.ConditionalFormatPresetCriterion
     langs:
