--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="5cf65-101">一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="5cf65-101">An interface for updating data on the ConditionalRangeBorderCollection object, for use in `conditionalRangeBorderCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="5cf65-102">.</span><span class="sxs-lookup"><span data-stu-id="5cf65-102"></span></span>'
+    summary: '一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     fullName: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#bottom:member'
     summary: |-
-      <span data-ttu-id="5cf65-103">获取下边框。</span><span class="sxs-lookup"><span data-stu-id="5cf65-103">Gets the bottom border.</span></span>
+      获取下边框。
 
-      <span data-ttu-id="5cf65-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5cf65-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottom
     fullName: bottom
     langs:
@@ -42,9 +42,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items~0:complex'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="5cf65-105">获取左边框。</span><span class="sxs-lookup"><span data-stu-id="5cf65-105">Gets the left border.</span></span>
+      获取左边框。
 
-      <span data-ttu-id="5cf65-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5cf65-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -57,9 +57,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#right:member'
     summary: |-
-      <span data-ttu-id="5cf65-107">获取右边框。</span><span class="sxs-lookup"><span data-stu-id="5cf65-107">Gets the right border.</span></span>
+      获取右边框。
 
-      <span data-ttu-id="5cf65-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5cf65-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: right
     fullName: right
     langs:
@@ -72,9 +72,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="5cf65-109">获取上边框。</span><span class="sxs-lookup"><span data-stu-id="5cf65-109">Gets the top border.</span></span>
+      获取上边框。
 
-      <span data-ttu-id="5cf65-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5cf65-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
