commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
@@ -131,7 +131,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: 必填。 代表源工作簿文件的 base64 编码的字符串。
+          description: 必需。 代表源工作簿文件的 base64 编码的字符串。
           type:
             - string
         - id: sheetNamesToInsert
@@ -166,7 +166,7 @@ items:
         description: 与每个新插入的工作表对应的 id 的数组。
       parameters:
         - id: base64File
-          description: 必填。 代表源工作簿文件的 base64 编码的字符串。
+          description: 必需。 代表源工作簿文件的 base64 编码的字符串。
           type:
             - string
         - id: sheetNamesToInsert
@@ -407,7 +407,7 @@ items:
         type:
           - 'excel!Excel.WorksheetCollection#items~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -425,7 +425,7 @@ items:
           type:
             - 'excel!Excel.WorksheetCollection#load~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -465,7 +465,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.WorksheetCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
