--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcustompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcustompropertycollection.yml
@@ -139,7 +139,7 @@ items:
         type:
           - 'excel!Excel.WorksheetCustomPropertyCollection#items~0:complex'
   - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -158,7 +158,7 @@ items:
           type:
             - 'excel!Excel.WorksheetCustomPropertyCollection#load~0:complex'
   - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -177,7 +177,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
