--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcustomproperty.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcustomproperty.yml
@@ -72,7 +72,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.WorksheetCustomProperty#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -91,7 +91,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.WorksheetCustomPropertyLoadOptions:interface'
   - uid: 'excel!Excel.WorksheetCustomProperty#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -110,7 +110,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.WorksheetCustomProperty#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
