--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.chartlegendentrycollectionloadoptions.yml
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryCollectionLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
